- initialise of ModuleProperty rework